move index to root

--- a/development/index.html
+++ b/development/index.html
@@ -5,8 +5,8 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Index</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="../fonts/fonts.css">
-        <link rel="stylesheet" href="../styles/style.css">
+        <link rel="stylesheet" href="fonts/fonts.css">
+        <link rel="stylesheet" href="styles/style.css">
     </head>
     <body>
 
@@ -25,8 +25,8 @@
                 <div class="start__item">
                     <div class="start__preview">
                         <img class="start__illustration"
-                             srcset="../content/start-a@2x.jpg 2x"
-                             src="../content/start-a.jpg"
+                             srcset="content/start-a@2x.jpg 2x"
+                             src="content/start-a.jpg"
                              width="300"
                              height="267"
                              alt=""
@@ -39,8 +39,8 @@
                 <div class="start__item">
                     <div class="start__preview">
                         <img class="start__illustration"
-                             srcset="../content/start-b@2x.jpg 2x"
-                             src="../content/start-b.jpg"
+                             srcset="content/start-b@2x.jpg 2x"
+                             src="content/start-b.jpg"
                              width="300"
                              height="238"
                              alt=""
@@ -53,8 +53,8 @@
                 <div class="start__item">
                     <div class="start__preview">
                         <img class="start__illustration"
-                             srcset="../content/start-c@2x.jpg 2x"
-                             src="../content/start-c.jpg"
+                             srcset="content/start-c@2x.jpg 2x"
+                             src="content/start-c.jpg"
                              width="300"
                              height="231"
                              alt=""
@@ -72,8 +72,8 @@
             </h2>
             <div class="sharing__body">
                 <img class="sharing__illustration"
-                     srcset="../content/sharing@2x.jpg"
-                     src="../content/sharing.jpg"
+                     srcset="content/sharing@2x.jpg"
+                     src="content/sharing.jpg"
                      width="513"
                      height="342"
                      alt=""
@@ -96,8 +96,8 @@
                 </h2>
                 <div class="catalog__body">
                     <img class="catalog__illustration"
-                         srcset="../content/catalog@2x.jpg 2x"
-                         src="../content/catalog.jpg"
+                         srcset="content/catalog@2x.jpg 2x"
+                         src="content/catalog.jpg"
                          width="466"
                          height="362"
                          alt=""
@@ -113,7 +113,7 @@
 
 
         <!-- Outline.js -->
-        <script src="../vendors/outline/outline.js"></script>
+        <script src="vendors/outline/outline.js"></script>
 
     </body>
 </html>
