.logo, .header and footer draft

--- a/development/index.html
+++ b/development/index.html
@@ -17,6 +17,9 @@
             </div>
         <![endif]-->
 
+        <header class="header container container--full-width">
+            <h1 class="header__emblem logo">Quotalogic</h1>
+        </header>
         <section class="start container">
             <h2 class="start__heading title">
                 Easy start
@@ -110,6 +113,11 @@
                 </div>
             </div>
         </section>
+        <footer class="footer">
+            <div class="footer__wrap container">
+                <div class="footer__emblem logo logo--inverted">Quotalogic</div>
+            </div>
+        </footer>
 
 
         <!-- Outline.js -->
