--- a/development/index.html
+++ b/development/index.html
@@ -20,6 +20,19 @@
         <header class="header container container--full-width">
             <h1 class="header__emblem logo">Quotalogic</h1>
         </header>
+        <div class="hero">
+            <div class="hero__wrap container">
+                <div class="hero__pre-heading">
+                    Streamlined eCommerce:
+                </div>
+                <div class="hero__heading">
+                    Shared Catalogs & Automated Offers
+                </div>
+                <div class="hero__description">
+                    Sharing products from many suppliers as easy as sharing music tracks from many artists on cloud services. Combine them into ‘playlist', tune it, use it or share with partners.
+                </div>
+            </div>
+        </div>
         <section class="start container">
             <h2 class="start__heading title">
                 Easy start
