--- a/development/index.html
+++ b/development/index.html
@@ -27,7 +27,7 @@
                         Streamlined eCommerce:
                     </div>
                     <div class="hero__heading">
-                        Shared Catalogs & Automated Offers
+                        Shared Catalogs &&nbsp;Automated Offers
                     </div>
                     <div class="hero__description">
                         Sharing products from many suppliers as easy as sharing music tracks from many artists on cloud services. Combine them into ‘playlist', tune it, use it or share with partners.
