--- a/development/index.html
+++ b/development/index.html
@@ -151,13 +151,15 @@
                     Multiple suppliers catalogs usage
                 </h2>
                 <div class="catalog__body">
-                    <img class="catalog__illustration"
-                         srcset="content/catalog@2x.jpg 2x"
-                         src="content/catalog.jpg"
-                         width="466"
-                         height="362"
-                         alt=""
-                    >
+                    <video class="catalog__illustration" width="466" autoplay muted playsinline loop>
+                        <source src="content/catalog.mp4" type="video/mp4">
+                        <img srcset="content/catalog@2x.jpg 2x"
+                             src="content/catalog.jpg"
+                             width="466"
+                             height="362"
+                             alt=""
+                        >
+                    </video>
                     <div class="catalog__description wysiwyg wysiwyg--dense">
                         <p>Combine new sets of products using many suppliers catalogs, price lists, promotions, commercial proposals, – and share them with your partners.</p>
                         <p>The dynamic data model allows you to forget about the need to update products: they will be continuously updated by the supplier.</p>
