--- a/production/index.html
+++ b/production/index.html
@@ -5,8 +5,8 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Index</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="fonts/fonts.css?1688789248">
-        <link rel="stylesheet" href="styles/style.css?1688789248">
+        <link rel="stylesheet" href="fonts/fonts.css?1688968598">
+        <link rel="stylesheet" href="styles/style.css?1688968598">
     </head>
     <body>
 
@@ -17,6 +17,62 @@
             </div>
         <![endif]-->
 
+        <header class="header container container--full-width">
+            <h1 class="header__emblem logo">Quotalogic</h1>
+        </header>
+        <div class="hero">
+            <div class="hero__head">
+                <div class="hero__head-wrap container">
+                    <div class="hero__pre-heading">
+                        Streamlined eCommerce:
+                    </div>
+                    <div class="hero__heading">
+                        Shared Catalogs &&nbsp;Automated Offers
+                    </div>
+                    <div class="hero__description">
+                        Sharing products from many suppliers as easy as sharing music tracks from many artists on cloud services. Combine them into ‘playlist', tune it, use it or share with partners.
+                    </div>
+                    <div class="hero__submit shadow">
+                        <button class="button">Book a demo</button>
+                    </div>
+                </div>
+            </div>
+            <div class="hero__summary">
+                <h2 class="visuallyhidden">Features</h2>
+                <div class="hero__summary-wrap container">
+                    <div class="hero__panel">
+                        <div class="hero__column">
+                            <h3 class="hero__sub-heading">
+                                Catalog sharing for wide dealers networks
+                            </h3>
+                            <ul class="hero__features-list list">
+                                <li class="list__item">The fastest way to give products to the supply chain</li>
+                                <li class="list__item">Actual data and effective sales tools for dealers</li>
+                            </ul>
+                        </div>
+                        <div class="hero__column">
+                            <h3 class="hero__sub-heading">
+                                An instant access to multiple suppliers catalogs
+                            </h3>
+                            <ul class="hero__features-list list">
+                                <li class="list__item">Take and use any products of many suppliers directly from their catalogues or even from promos, pricelists and quotations</li>
+                                <li class="list__item">Combine and re-share product sets with partners and customers by simple drag-n-drop</li>
+                            </ul>
+                        </div>
+                        <div class="hero__column">
+                            <h3 class="hero__sub-heading">
+                                A fastest and easiest quotation tool
+                            </h3>
+                            <ul class="hero__features-list list">
+                                <li class="list__item">Full and always actual multiple suppliers’ product data.</li>
+                                <li class="list__item">AI-automated compilation of quotes.</li>
+                                <li class="list__item">No CRM and PIM deployment. No API needed, no coding, no file-parsing, no set-up: just choose-and-sell</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <section class="start container">
             <h2 class="start__heading title">
                 Easy start
@@ -95,13 +151,15 @@
                     Multiple suppliers catalogs usage
                 </h2>
                 <div class="catalog__body">
-                    <img class="catalog__illustration"
-                         srcset="content/catalog@2x.jpg 2x"
-                         src="content/catalog.jpg"
-                         width="466"
-                         height="362"
-                         alt=""
-                    >
+                    <video class="catalog__illustration" width="466" autoplay muted playsinline loop>
+                        <source src="content/catalog.mp4" type="video/mp4">
+                        <img srcset="content/catalog@2x.jpg 2x"
+                             src="content/catalog.jpg"
+                             width="466"
+                             height="362"
+                             alt=""
+                        >
+                    </video>
                     <div class="catalog__description wysiwyg wysiwyg--dense">
                         <p>Combine new sets of products using many suppliers catalogs, price lists, promotions, commercial proposals, – and share them with your partners.</p>
                         <p>The dynamic data model allows you to forget about the need to update products: they will be continuously updated by the supplier.</p>
@@ -110,6 +168,11 @@
                 </div>
             </div>
         </section>
+        <footer class="footer">
+            <div class="footer__wrap container">
+                <div class="footer__emblem logo logo--inverted">Quotalogic</div>
+            </div>
+        </footer>
 
 
         <!-- Outline.js -->
