--- a/production/markups/_button.html
+++ b/production/markups/_button.html
@@ -5,8 +5,8 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>.button</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&subset=cyrillic" rel="stylesheet">
-        <link rel="stylesheet" href="../styles/style.css?1688789248">
+        <link rel="stylesheet" href="../fonts/fonts.css?1688968598">
+        <link rel="stylesheet" href="../styles/style.css?1688968598">
     </head>
 
     <body>
@@ -17,21 +17,33 @@
             <br>
             <br>
             <h1>.button</h1>
+
+            <button class="button">Book a demo</button>
+
+            <br>
+            <br>
             <p>
-                Description
+                Вариант использования с <b>.shadow</b>:
             </p>
 
-            <button class="button">.button</button>
+            <div class="shadow">
+                <button class="button">Book a demo</button>
+            </div>
+
 
             <br>
             <br>
             <br>
             <br>
-            <h2>_size_</h2>
+            <h2>.button--inverted</h2>
+            <p>
+                Здесь тень встроенна в кнопку:
+            </p>
+            <div style="padding: 40px; background-color: #0A80BD;">
 
-            <button class="button button_size_larger" type="button">.button_size_larger</button>
+                <button class="button button--inverted">Book a demo</button>
 
-
+            </div>
             <br>
             <br>
             <br>
@@ -94,10 +106,11 @@
         <script src="../vendors/jquery.countdown/jquery.countdown-ru.js"></script>
 
         <!-- Temp -->
-        <script src="../scripts/temp.js?1688789248"></script>
+        <script src="../scripts/temp.js?1688968598"></script>
 
 
     </body>
 </html>
+
 
 
