--- a/development/index.html
+++ b/development/index.html
@@ -151,7 +151,7 @@
                     Multiple suppliers catalogs usage
                 </h2>
                 <div class="catalog__body">
-                    <video class="catalog__illustration" width="466" autoplay muted playsinline loop>
+                    <video class="catalog__illustration" poster="content/catalog@2x.jpg" width="466" autoplay muted playsinline loop>
                         <source src="content/catalog.mp4" type="video/mp4">
                         <img srcset="content/catalog@2x.jpg 2x"
                              src="content/catalog.jpg"
