--- a/production/index.html
+++ b/production/index.html
@@ -5,8 +5,8 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Index</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="fonts/fonts.css?1688968598">
-        <link rel="stylesheet" href="styles/style.css?1688968598">
+        <link rel="stylesheet" href="fonts/fonts.css?1688968842">
+        <link rel="stylesheet" href="styles/style.css?1688968842">
     </head>
     <body>
 
@@ -151,7 +151,7 @@
                     Multiple suppliers catalogs usage
                 </h2>
                 <div class="catalog__body">
-                    <video class="catalog__illustration" width="466" autoplay muted playsinline loop>
+                    <video class="catalog__illustration" poster="content/catalog@2x.jpg" width="466" autoplay muted playsinline loop>
                         <source src="content/catalog.mp4" type="video/mp4">
                         <img srcset="content/catalog@2x.jpg 2x"
                              src="content/catalog.jpg"
@@ -168,6 +168,7 @@
                 </div>
             </div>
         </section>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus animi commodi consequatur consequuntur culpa deleniti dolorum eos esse eveniet facilis ipsum maxime necessitatibus nobis, praesentium quibusdam quisquam quos rerum saepe sed ullam vel vero vitae voluptates. Delectus doloribus in nesciunt perspiciatis quia. Consequatur corporis cum debitis dignissimos distinctio explicabo odio pariatur quam quo, similique. At deleniti dolor molestiae mollitia, quis repellat suscipit vero! Ad alias animi assumenda consequatur deleniti dignissimos dolorem doloremque doloribus est fuga iste maiores maxime, minima nemo nulla omnis optio perferendis porro quam quas quisquam, quos recusandae reiciendis repellat similique suscipit vero voluptas! Animi distinctio error et facere facilis laboriosam laudantium perferendis quis, recusandae repudiandae, soluta sunt tenetur, vitae voluptas voluptatum! Adipisci culpa dicta dolore dolorem ea, expedita natus non suscipit vel vitae! Accusantium, cum deserunt dignissimos doloribus ducimus explicabo hic laborum laudantium, numquam obcaecati odio placeat sint soluta suscipit velit! Ab aperiam architecto aspernatur commodi consectetur cumque deleniti deserunt dolorem doloribus dolorum, ea eligendi est, eveniet expedita explicabo harum impedit ipsam iusto laudantium libero minima nobis nostrum obcaecati officia officiis placeat porro quaerat quasi quisquam quos, repellat rerum saepe soluta suscipit tenetur totam vitae! Adipisci cum cumque cupiditate dicta doloribus est expedita illo inventore minus modi mollitia nam nemo nihil perspiciatis quibusdam quo reprehenderit rerum, sint ullam voluptatum! Molestias nemo sapiente similique! Accusantium aliquam, aliquid doloribus eaque eligendi eos fuga incidunt, itaque magnam mollitia, nam qui quia tenetur! Aliquid beatae cupiditate debitis, enim explicabo facilis inventore ipsum labore non obcaecati praesentium quam quia quidem similique voluptatem, voluptates voluptatum! Cumque cupiditate est minima modi molestias nihil perferendis quam vel. Atque consectetur consequatur, dolorum esse explicabo maxime minima sint temporibus unde voluptatum! Ad aliquid, consectetur est expedita fugiat illo inventore minima necessitatibus officiis porro quis quo, quos sapiente sint veniam vero voluptatibus. Atque est ex hic id necessitatibus quasi qui similique sint tempore. Adipisci amet architecto dolor dolore dolorem eaque earum esse est eveniet harum impedit in, incidunt iste iusto labore nihil nostrum officia pariatur perferendis perspiciatis quae qui quo sed temporibus tenetur vel velit. Ab aliquam assumenda, blanditiis commodi consequuntur debitis et illum in minima molestiae nemo neque nesciunt nobis nulla officia placeat quae quidem rem, tempore voluptatem? Eos eum ex, explicabo facilis fuga hic incidunt iste magnam neque nesciunt nostrum reiciendis repellat sunt tenetur unde ut velit, voluptatem voluptatum. Aperiam beatae consequuntur cum dignissimos earum eligendi exercitationem illo laborum minima minus nulla numquam quae quam quod recusandae, rem repellat saepe unde ut voluptas! Adipisci in libero officiis reiciendis. Assumenda cum, eaque illo illum impedit inventore laborum officiis quae quasi reprehenderit sequi, similique, sint unde voluptates voluptatum! Blanditiis expedita laborum nisi officiis similique. Adipisci aliquam architecto asperiores, blanditiis consequuntur debitis dolores eveniet expedita iste molestias neque nulla porro quisquam quos reiciendis reprehenderit sunt vero voluptatum? Accusamus, amet blanditiis culpa cum cumque dolorem doloremque ea eum modi neque, nisi obcaecati omnis quam quidem quisquam, rem sequi voluptas. Architecto assumenda aut beatae corporis dolorum eos esse ex maxime molestiae, molestias non nostrum optio porro quibusdam saepe soluta ullam voluptas!
         <footer class="footer">
             <div class="footer__wrap container">
                 <div class="footer__emblem logo logo--inverted">Quotalogic</div>
