--- a/development/index.html
+++ b/development/index.html
@@ -170,24 +170,95 @@
         </section>
         <section class="truth container">
             <h2 class="truth__heading title">
-                A central source of truth
+                A central source of&nbsp;truth
             </h2>
             <div class="truth__description">
-                Using a single product image across the dealer network facilitates the collection and generation of rich Collaborative Dealer Network Content:
+                Using a single product image across the dealer network facilitates<br class="desktop-only">
+                the collection and generation of rich Collaborative Dealer Network Content:
             </div>
             <div class="truth__body">
-                <img class="truth__illustration"
-                     srcset="content/truth@2x.jpg 2x"
-                     src="content/truth.jpg"
-                     width="509"
-                     height="570"
-                     alt=""
-                >
+                <div class="truth__preview">
+                    <img class="truth__illustration"
+                         srcset="content/truth@2x.jpg 2x"
+                         src="content/truth.jpg"
+                         width="509"
+                         height="570"
+                         alt=""
+                    >
+                </div>
                 <div class="truth__content">
-                    <div class="truth__list">
-                        <div class="truth__tag feature">
+                    <div class="truth__list hide-scrollbar">
+                        <div class="feature">
                             MSR Price
                         </div>
+                        <span class="feature">
+                            Net Price
+                        </span>
+                        <span class="feature">
+                            Street Price
+                            <span class="feature__tag badge badge--stats">
+                                Stats’ adjusted
+                            </span>
+                        </span>
+                        <span class="feature">
+                            Price tiering
+                        </span>
+                        <!-- Дублируем этот айтем чтобы немного изменить порядок-->
+                        <span class="feature feature--pointed smartphone-only" role="presentation" aria-hidden="true">
+                            Images
+                        </span>
+                        <span class="feature">
+                            Description
+                            <span class="feature__tag badge badge--ai">
+                                AI-Powered
+                            </span>
+                            <span class="feature__tag badge badge--dealers">
+                                Dealers-Curated
+                            </span>
+                        </span>
+                        <span class="feature feature--pointed desktop-only">
+                            Images
+                        </span>
+                        <span class="feature">
+                            Sales pitches
+                        </span>
+                        <span class="feature">
+                            Key selling points
+                            <span class="feature__tag badge badge--ai">
+                                AI-Powered
+                            </span>
+                        </span>
+                        <span class="feature">
+                            Unique selling propositions
+                        </span>
+                        <span class="feature">
+                            Stock availability
+                        </span>
+                        <span class="feature">
+                            Task-Fit Tips
+                            <span class="feature__tag badge badge--ai">
+                                AI-Powered
+                            </span>
+                            <span class="feature__tag badge badge--dealers">
+                                Dealers-Curated
+                            </span>
+                        </span>
+                        <span class="feature">
+                            Product portfolio
+                            <span class="feature__tag badge badge--dealers">
+                                Dealers-Curated
+                            </span>
+                        </span>
+                        <span class="feature">
+                            User-Generated Content
+                        </span>
+                        <span class="feature">
+                            Chat with product experts
+                        </span>
+                        <span class="feature">
+                            Any custom data
+                            <span class="feature__sparkles">✨</span>
+                        </span>
                     </div>
                 </div>
             </div>
