--- a/development/markups/_badge.html
+++ b/development/markups/_badge.html
@@ -17,20 +17,29 @@
             <br>
             <br>
             <h1>.badge</h1>
-            <p>
-                Не очень понятно по какому принципу раздаются цвета, так
-                что будет просто <b>.badge--yellow</b>, <b>.badge--pink</b> и <b>.badge--blue</b>
-            </p>
 
-            <span class="badge badge--yellow">
+            <br>
+            <h2>.badge--stats</h2>
+
+            <span class="badge badge--stats">
                 Stats’ adjusted
             </span>
 
-            <span class="badge badge--pink">
+            <br>
+            <br>
+            <br>
+            <h2>.badge--ai</h2>
+
+            <span class="badge badge--ai">
                 AI-Powered
             </span>
 
-            <span class="badge badge--blue">
+            <br>
+            <br>
+            <br>
+            <h2>.badge--dealers</h2>
+
+            <span class="badge badge--dealers">
                 Dealers-Curated
             </span>
 
