--- a/development/markups/_feature.html
+++ b/development/markups/_feature.html
@@ -22,10 +22,12 @@
 
             <br>
             <br>
+            <br>
+            <h2>.feature__tag</h2>
 
             <span class="feature">
                 Street Price
-                <span class="feature__tag badge badge--yellow">
+                <span class="feature__tag badge badge--stats">
                     Stats’ adjusted
                 </span>
             </span>
@@ -35,16 +37,19 @@
 
             <span class="feature">
                 Description
-                <span class="feature__tag badge badge--pink">
+                <span class="feature__tag badge badge--ai">
                     AI-Powered
                 </span>
-                <span class="feature__tag badge badge--blue">
-                    Curated
+                <span class="feature__tag badge badge--dealers">
+                    Dealers-Curated
                 </span>
             </span>
 
             <br>
             <br>
+            <br>
+            <br>
+            <h2>.feature__sparkles</h2>
 
             <span class="feature">
                 Any custom data
@@ -54,14 +59,13 @@
 
             <br>
             <br>
+            <br>
+            <h2>.feature--pointed</h2>
 
             <span class="feature feature--pointed">
                 Images
             </span>
 
-            <br>
-            <br>
-            <br>
 
 
             <br>
