--- a/development/index.html
+++ b/development/index.html
@@ -168,98 +168,164 @@
                 </div>
             </div>
         </section>
-        <section class="truth container">
-            <h2 class="truth__heading title">
-                A central source of&nbsp;truth
-            </h2>
-            <div class="truth__description">
-                Using a single product image across the dealer network facilitates<br class="desktop-only">
-                the collection and generation of rich Collaborative Dealer Network Content:
+        <section class="truth">
+            <div class="truth__wrap container">
+                <h2 class="truth__heading title">
+                    A central source of&nbsp;truth
+                </h2>
+                <div class="truth__description">
+                    Using a single product image across the dealer network facilitates<br class="desktop-only">
+                    the collection and generation of rich Collaborative Dealer Network Content:
+                </div>
+                <div class="truth__body">
+                    <div class="truth__preview">
+                        <img class="truth__illustration"
+                             srcset="content/truth@2x.jpg 2x"
+                             src="content/truth.jpg"
+                             width="509"
+                             height="570"
+                             alt=""
+                        >
+                    </div>
+                    <div class="truth__content">
+                        <div class="truth__list hide-scrollbar">
+                            <div class="feature">
+                                MSR Price
+                            </div>
+                            <span class="feature">
+                                Net Price
+                            </span>
+                            <span class="feature">
+                                Street Price
+                                <span class="feature__tag badge badge--stats">
+                                    Stats’ adjusted
+                                </span>
+                            </span>
+                            <span class="feature">
+                                Price tiering
+                            </span>
+                            <!-- Дублируем этот айтем чтобы немного изменить порядок-->
+                            <span class="feature feature--pointed smartphone-only" role="presentation" aria-hidden="true">
+                                Images
+                            </span>
+                            <span class="feature">
+                                Description
+                                <span class="feature__tag badge badge--ai">
+                                    AI-Powered
+                                </span>
+                                <span class="feature__tag badge badge--dealers">
+                                    Dealers-Curated
+                                </span>
+                            </span>
+                            <span class="feature feature--pointed desktop-only">
+                                Images
+                            </span>
+                            <span class="feature">
+                                Sales pitches
+                            </span>
+                            <span class="feature">
+                                Key selling points
+                                <span class="feature__tag badge badge--ai">
+                                    AI-Powered
+                                </span>
+                            </span>
+                            <span class="feature">
+                                Unique selling propositions
+                            </span>
+                            <span class="feature">
+                                Stock availability
+                            </span>
+                            <span class="feature">
+                                Task-Fit Tips
+                                <span class="feature__tag badge badge--ai">
+                                    AI-Powered
+                                </span>
+                                <span class="feature__tag badge badge--dealers">
+                                    Dealers-Curated
+                                </span>
+                            </span>
+                            <span class="feature">
+                                Product portfolio
+                                <span class="feature__tag badge badge--dealers">
+                                    Dealers-Curated
+                                </span>
+                            </span>
+                            <span class="feature">
+                                User-Generated Content
+                            </span>
+                            <span class="feature">
+                                Chat with product experts
+                            </span>
+                            <span class="feature">
+                                Any custom data
+                                <span class="feature__sparkles">✨</span>
+                            </span>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="truth__body">
-                <div class="truth__preview">
-                    <img class="truth__illustration"
-                         srcset="content/truth@2x.jpg 2x"
-                         src="content/truth.jpg"
-                         width="509"
-                         height="570"
+        </section>
+        <section class="sales container">
+            <h2 class="sales__heading title">
+                A central point of sales
+            </h2>
+            <div class="sales__description">
+                Streamline your proposal process like never before in a Quote Management System:
+            </div>
+            <div class="sales__body">
+                <div class="sales__content">
+                    <div class="sales__list">
+                        <div class="sales__item">
+                            <h3 class="sales__sub-heading">
+                                Speed up the proposal process to seconds:
+                            </h3>
+                            <ul class="sales__features list list--simpler">
+                                <li class="list__item">Automated quotes with real-time supplier products</li>
+                                <li class="list__item">Broadcast supplier deals and USPs</li>
+                                <li class="list__item">AI-Powered Insights</li>
+                            </ul>
+                        </div>
+                        <div class="sales__item">
+                            <h3 class="sales__sub-heading">
+                                Tailor proposals for better deal success:
+                            </h3>
+                            <ul class="sales__features list list--simpler">
+                                <li class="list__item">Templates and Mobile accessibility</li>
+                                <li class="list__item">Multi-Currency and Multi-language support</li>
+                                <li class="list__item">Integrated with eSign and Key financial services</li>
+                            </ul>
+                        </div>
+                        <div class="sales__item">
+                            <h3 class="sales__sub-heading">
+                                Enhance presentation of complex products:
+                            </h3>
+                            <ul class="sales__features list list--simpler">
+                                <li class="list__item">Supplier’s Sales Pitches and Key Selling Points</li>
+                                <li class="list__item">Direct chat with Experts and Sales</li>
+                                <li class="list__item">Customer-Configurable qoutes</li>
+                            </ul>
+                        </div>
+                        <div class="sales__item">
+                            <h3 class="sales__sub-heading">
+                                Control the process:
+                            </h3>
+                            <ul class="sales__features list list--simpler">
+                                <li class="list__item">Approval workflow and Automated follow-ups</li>
+                                <li class="list__item">Collaboration Tools and Revision tracking</li>
+                                <li class="list__item">Export proposal data</li>
+                                <li class="list__item">Real-time analytics</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="sales__preview">
+                    <img class="sales__illustration"
+                         srcset="content/sales@2x.png 2x"
+                         src="content/sales.png"
+                         width="702"
+                         height="678"
                          alt=""
                     >
-                </div>
-                <div class="truth__content">
-                    <div class="truth__list hide-scrollbar">
-                        <div class="feature">
-                            MSR Price
-                        </div>
-                        <span class="feature">
-                            Net Price
-                        </span>
-                        <span class="feature">
-                            Street Price
-                            <span class="feature__tag badge badge--stats">
-                                Stats’ adjusted
-                            </span>
-                        </span>
-                        <span class="feature">
-                            Price tiering
-                        </span>
-                        <!-- Дублируем этот айтем чтобы немного изменить порядок-->
-                        <span class="feature feature--pointed smartphone-only" role="presentation" aria-hidden="true">
-                            Images
-                        </span>
-                        <span class="feature">
-                            Description
-                            <span class="feature__tag badge badge--ai">
-                                AI-Powered
-                            </span>
-                            <span class="feature__tag badge badge--dealers">
-                                Dealers-Curated
-                            </span>
-                        </span>
-                        <span class="feature feature--pointed desktop-only">
-                            Images
-                        </span>
-                        <span class="feature">
-                            Sales pitches
-                        </span>
-                        <span class="feature">
-                            Key selling points
-                            <span class="feature__tag badge badge--ai">
-                                AI-Powered
-                            </span>
-                        </span>
-                        <span class="feature">
-                            Unique selling propositions
-                        </span>
-                        <span class="feature">
-                            Stock availability
-                        </span>
-                        <span class="feature">
-                            Task-Fit Tips
-                            <span class="feature__tag badge badge--ai">
-                                AI-Powered
-                            </span>
-                            <span class="feature__tag badge badge--dealers">
-                                Dealers-Curated
-                            </span>
-                        </span>
-                        <span class="feature">
-                            Product portfolio
-                            <span class="feature__tag badge badge--dealers">
-                                Dealers-Curated
-                            </span>
-                        </span>
-                        <span class="feature">
-                            User-Generated Content
-                        </span>
-                        <span class="feature">
-                            Chat with product experts
-                        </span>
-                        <span class="feature">
-                            Any custom data
-                            <span class="feature__sparkles">✨</span>
-                        </span>
-                    </div>
                 </div>
             </div>
         </section>
