--- a/development/index.html
+++ b/development/index.html
@@ -265,67 +265,69 @@
                 </div>
             </div>
         </section>
-        <section class="sales container">
-            <h2 class="sales__heading title">
-                A central point of sales
-            </h2>
-            <div class="sales__description">
-                Streamline your proposal process like never before in a Quote Management System:
-            </div>
-            <div class="sales__body">
-                <div class="sales__content">
-                    <div class="sales__list">
-                        <div class="sales__item">
-                            <h3 class="sales__sub-heading">
-                                Speed up the proposal process to seconds:
-                            </h3>
-                            <ul class="sales__features list list--simpler">
-                                <li class="list__item">Automated quotes with real-time supplier products</li>
-                                <li class="list__item">Broadcast supplier deals and USPs</li>
-                                <li class="list__item">AI-Powered Insights</li>
-                            </ul>
-                        </div>
-                        <div class="sales__item">
-                            <h3 class="sales__sub-heading">
-                                Tailor proposals for better deal success:
-                            </h3>
-                            <ul class="sales__features list list--simpler">
-                                <li class="list__item">Templates and Mobile accessibility</li>
-                                <li class="list__item">Multi-Currency and Multi-language support</li>
-                                <li class="list__item">Integrated with eSign and Key financial services</li>
-                            </ul>
-                        </div>
-                        <div class="sales__item">
-                            <h3 class="sales__sub-heading">
-                                Enhance presentation of complex products:
-                            </h3>
-                            <ul class="sales__features list list--simpler">
-                                <li class="list__item">Supplier’s Sales Pitches and Key Selling Points</li>
-                                <li class="list__item">Direct chat with Experts and Sales</li>
-                                <li class="list__item">Customer-Configurable qoutes</li>
-                            </ul>
-                        </div>
-                        <div class="sales__item">
-                            <h3 class="sales__sub-heading">
-                                Control the process:
-                            </h3>
-                            <ul class="sales__features list list--simpler">
-                                <li class="list__item">Approval workflow and Automated follow-ups</li>
-                                <li class="list__item">Collaboration Tools and Revision tracking</li>
-                                <li class="list__item">Export proposal data</li>
-                                <li class="list__item">Real-time analytics</li>
-                            </ul>
+        <section class="sales">
+            <div class="sales__wrap container">
+                <h2 class="sales__heading title">
+                    A central point of sales
+                </h2>
+                <div class="sales__description">
+                    Streamline your proposal process like never before in a Quote Management System:
+                </div>
+                <div class="sales__body">
+                    <div class="sales__content">
+                        <div class="sales__list">
+                            <div class="sales__item">
+                                <h3 class="sales__sub-heading">
+                                    Speed up the proposal process to seconds:
+                                </h3>
+                                <ul class="sales__features list list--simpler">
+                                    <li class="list__item">Automated quotes with real-time supplier products</li>
+                                    <li class="list__item">Broadcast supplier deals and USPs</li>
+                                    <li class="list__item">AI-Powered Insights</li>
+                                </ul>
+                            </div>
+                            <div class="sales__item">
+                                <h3 class="sales__sub-heading">
+                                    Tailor proposals for better deal success:
+                                </h3>
+                                <ul class="sales__features list list--simpler">
+                                    <li class="list__item">Templates and Mobile accessibility</li>
+                                    <li class="list__item">Multi-Currency and Multi-language support</li>
+                                    <li class="list__item">Integrated with eSign and Key financial services</li>
+                                </ul>
+                            </div>
+                            <div class="sales__item">
+                                <h3 class="sales__sub-heading">
+                                    Enhance presentation of complex products:
+                                </h3>
+                                <ul class="sales__features list list--simpler">
+                                    <li class="list__item">Supplier’s Sales Pitches and Key Selling Points</li>
+                                    <li class="list__item">Direct chat with Experts and Sales</li>
+                                    <li class="list__item">Customer-Configurable qoutes</li>
+                                </ul>
+                            </div>
+                            <div class="sales__item">
+                                <h3 class="sales__sub-heading">
+                                    Control the process:
+                                </h3>
+                                <ul class="sales__features list list--simpler">
+                                    <li class="list__item">Approval workflow and Automated follow-ups</li>
+                                    <li class="list__item">Collaboration Tools and Revision tracking</li>
+                                    <li class="list__item">Export proposal data</li>
+                                    <li class="list__item">Real-time analytics</li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="sales__preview">
-                    <img class="sales__illustration"
-                         srcset="content/sales@2x.png 2x"
-                         src="content/sales.png"
-                         width="702"
-                         height="678"
-                         alt=""
-                    >
+                    <div class="sales__preview">
+                        <img class="sales__illustration"
+                             srcset="content/sales@2x.png 2x"
+                             src="content/sales.png"
+                             width="702"
+                             height="678"
+                             alt=""
+                        >
+                    </div>
                 </div>
             </div>
         </section>
