--- a/development/index.html
+++ b/development/index.html
@@ -268,7 +268,7 @@
         <section class="sales">
             <div class="sales__wrap container">
                 <h2 class="sales__heading title">
-                    A central point of sales
+                    A central point of&nbsp;sales
                 </h2>
                 <div class="sales__description">
                     Streamline your proposal process like never before in a Quote Management System:
