--- a/development/index.html
+++ b/development/index.html
@@ -151,7 +151,7 @@
                     Multiple suppliers catalogs usage
                 </h2>
                 <div class="catalog__body">
-                    <video class="catalog__illustration" poster="content/catalog@2x.jpg" width="466" autoplay muted playsinline loop>
+                    <video class="catalog__illustration" poster="content/catalog@2x.jpg" width="466" preload="auto" autoplay muted playsinline loop>
                         <source src="content/catalog.mp4" type="video/mp4">
                         <img srcset="content/catalog@2x.jpg 2x"
                              src="content/catalog.jpg"
@@ -328,6 +328,48 @@
                              alt=""
                         >
                     </div>
+                </div>
+            </div>
+        </section>
+        <section class="cta">
+            <div class="cta__wrap container">
+                <h2 class="cta__heading title">
+                    Form your catalog<br class="desktop-only"> and start selling right&nbsp;now
+                </h2>
+                <a class="cta__submit button button--inverted" href="#">
+                    Book a demo
+                </a>
+                <div class="cta__note">
+                    start for free
+                </div>
+                <div class="cta__preview">
+                    <a class="cta__thumb" href="#"><!-- может быть некликабельным дивом -->
+                        <img class="cta__screenshot"
+                             srcset="temp/cta-screenshot-secondary-a@2x.jpg 2x"
+                             src="temp/cta-screenshot-secondary-a.jpg"
+                             width="486"
+                             height="356"
+                             alt=""
+                        >
+                    </a>
+                    <a class="cta__thumb cta__thumb--primary" href="#"><!-- может быть некликабельным дивом -->
+                        <img class="cta__screenshot"
+                             srcset="temp/cta-screenshot-primary@2x.jpg 2x"
+                             src="temp/cta-screenshot-primary.jpg"
+                             width="584"
+                             height="428"
+                             alt=""
+                        >
+                    </a>
+                    <a class="cta__thumb" href="#"><!-- может быть некликабельным дивом -->
+                        <img class="cta__screenshot"
+                             srcset="temp/cta-screenshot-secondary-b@2x.jpg 2x"
+                             src="temp/cta-screenshot-secondary-b.jpg"
+                             width="486"
+                             height="356"
+                             alt=""
+                        >
+                    </a>
                 </div>
             </div>
         </section>
