--- a/development/index.html
+++ b/development/index.html
@@ -384,10 +384,10 @@
                 </div>
             </div>
             <div class="benefits__body">
-                <div class="benefits__item">
+                <div class="benefits__item benefits__item--for-distributor-manufacturer">
                     <div class="benefits__screen benefits__screen--aspect">
                         <div class="benefits__summary">
-                            <ul class="list list--white">
+                            <ul class="benefits__features list list--white">
                                 <li class="list__item">Effortlessly distribute personalised data and promotions throughout the dealer chain.</li>
                                 <li class="list__item">Boost advertisements effectiveness with instant updates.</li>
                                 <li class="list__item">Simplify the promotion of high-value goods by sharing sales pitches and unique selling propositions.</li>
@@ -399,16 +399,16 @@
                         <img class="benefits__screenshot"
                              srcset="content/benefits-screenshot-a@2x.jpg 2x"
                              src="content/benefits-screenshot-a.jpg"
-                             width="654"
-                             height="503"
+                             width="622"
+                             height="466"
                              alt=""
                         >
                     </div>
                 </div>
-                <div class="benefits__item">
+                <div class="benefits__item benefits__item--for-dealer-and-seller">
                     <div class="benefits__screen benefits__screen--alternate">
                         <div class="benefits__summary">
-                            <ul class="list">
+                            <ul class="benefits__features list">
                                 <li class="list__item">Have a central source of always actual product data. No need to duplicate supplier’s product data and worry about it being updated.</li>
                                 <li class="list__item">Use built-in sales and quotation tools based on ready-to sell suppliers catalogs</li>
                                 <li class="list__item">Start working with new suppliers faster and more efficiently with no data parsing</li>
@@ -420,8 +420,8 @@
                         <img class="benefits__screenshot"
                              srcset="content/benefits-screenshot-b@2x.png 2x"
                              src="content/benefits-screenshot-b.png"
-                             width="625"
-                             height="503"
+                             width="622"
+                             height="466"
                              alt=""
                         >
                     </div>
